Bug 358183: xml elements should be equal only if they have the same number of attributes. r=brendan